change image new

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img class="fit-picture" src="p3.png" alt="Terry Profile picture"></td>
+      <td><img class="fit-picture" src="P3.png" alt="Terry Profile picture"></td>
       <td><h1>Terry Cleveland</h1>
       <p><em>Founder and CTO of <strong><a href="https://codespark.com/">The App for kids</a></strong>.</em></p>
       <p>I am an iOS and web Developer. I love playing tennis and cycling.</p></td>
